# simpleprompts

./: README.md  main.py  pyproject.toml
src/simpleprompts/: __init__.py
