[project]
name = "simpleprompts"
version = "0.1.1a1"
description = "A simple library for constructing LLM prompts"
authors = [
  { name = "Yasser Ahmed", email = "yasserfawzi1029@outlook.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
